--- a/lib/ressipy/web/templates/category/show.html.eex
+++ b/lib/ressipy/web/templates/category/show.html.eex
@@ -1,13 +1,30 @@
 <h2><%= @category.name %></h2>
 
-<ul>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Author</th>
+      <th>Default image</th>
 
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
 <%= for recipe <- @category.recipes do %>
-  <li>
-    <%= link recipe.name, to: recipe_path(@conn, :show, recipe.id) %></span>
-  </li>
-<% end %>
+    <tr>
+      <td><%= recipe.name %></td>
+      <td><%= recipe.author %></td>
+      <td><%= recipe.default_image %></td>
 
-</ul>
+      <td class="text-right">
+        <span><%= link "Show", to: recipe_path(@conn, :show, recipe), class: "btn btn-default btn-xs" %></span>
+        <span><%= link "Edit", to: recipe_path(@conn, :edit, recipe), class: "btn btn-default btn-xs" %></span>
+        <span><%= link "Delete", to: recipe_path(@conn, :delete, recipe), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
+      </td>
+    </tr>
+<% end %>
+  </tbody>
+</table>
 
 <span><%= link "Back", to: category_path(@conn, :index) %></span>
