--- a/lib/ressipy/web/templates/recipe/form.html.eex
+++ b/lib/ressipy/web/templates/recipe/form.html.eex
@@ -12,6 +12,10 @@
   </div>
 
   <div class="form-group">
+    <%= label f, :category_id, class: "control-label" %>
+    <%= select f, :category_id, @categories |> for_select %>
+
+  <div class="form-group">
     <%= label f, :author, class: "control-label" %>
     <%= text_input f, :author, class: "form-control" %>
     <%= error_tag f, :author %>
