--- a/lib/ressipy/web/templates/recipe/new.html.eex
+++ b/lib/ressipy/web/templates/recipe/new.html.eex
@@ -1,6 +1,7 @@
 <h2>New Recipe</h2>
 
 <%= render "form.html", changeset: @changeset,
+                        categories: @categories,
                         action: recipe_path(@conn, :create) %>
 
 <span><%= link "Back", to: recipe_path(@conn, :index) %></span>
