--- a/lib/ressipy/web/templates/layout/app.html.eex
+++ b/lib/ressipy/web/templates/layout/app.html.eex
@@ -7,19 +7,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello Ressipy!</title>
+    <title>Ressipy</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
   <body>
     <div class="container">
       <header class="header">
-        <nav role="navigation">
-          <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
-          </ul>
-        </nav>
-        <span class="logo"></span>
+        <h1>
+          <%= link "Ressipy", to: category_path(@conn, :index) %>
+        </h1>
       </header>
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
