make new recipe from category page

--- a/lib/ressipy/web/templates/category/show.html.eex
+++ b/lib/ressipy/web/templates/category/show.html.eex
@@ -27,4 +27,5 @@
   </tbody>
 </table>
 
+<span><%= link "New Recipe", to: recipe_path(@conn, :new, category: @category) %></span>
 <span><%= link "Back", to: category_path(@conn, :index) %></span>
