--- a/lib/ressipy/web/templates/recipe/form.html.eex
+++ b/lib/ressipy/web/templates/recipe/form.html.eex
@@ -13,7 +13,9 @@
 
   <div class="form-group">
     <%= label f, :category_id, class: "control-label" %>
-    <%= select f, :category_id, @categories |> for_select %>
+    <%= select f, :category_id, @categories |> for_select, class: "form-control" %>
+    <%= error_tag f, :category_id %>
+  </div>
 
   <div class="form-group">
     <%= label f, :author, class: "control-label" %>
