--- a/lib/ressipy/web/templates/recipe/form.html.eex
+++ b/lib/ressipy/web/templates/recipe/form.html.eex
@@ -29,6 +29,35 @@
     <%= error_tag f, :default_image %>
   </div>
 
+  <h3>Ingredients</h3>
+  <%= inputs_for f, :ingredients, fn j -> %>
+    <div class="row">
+      <div class="form-group col-xs-3">
+        <%= label j, :amount, class: "control-label" %>
+        <%= text_input j, :amount, class: "form-control" %>
+        <%= error_tag j, :amount %>
+      </div>
+      <%= inputs_for j, :ingredient, fn g -> %>
+      <div class="form-group col-xs-9">
+        <%= label g, :name, class: "control-label" %>
+        <%= text_input g, :name, class: "form-control" %>
+        <%= error_tag g, :name %>
+      </div>
+      <% end %>
+    </div>
+  <% end %>
+
+  <h3>Instructions</h3>
+  <%= inputs_for f, :instructions, fn s -> %>
+    <div class="form-group">
+      <div class="input-group">
+        <span class="input-group-addon"><%= s.data.order %></span>
+        <%= text_input s, :text, class: "form-control" %>
+      </div>
+      <%= error_tag s, :text %>
+    </div>
+  <% end %>
+
   <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
   </div>
