--- a/lib/ressipy/web/templates/recipe/index.html.eex
+++ b/lib/ressipy/web/templates/recipe/index.html.eex
@@ -5,7 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Author</th>
-      <th>Default image</th>
+      <th>Category</th>
 
       <th></th>
     </tr>
@@ -15,7 +15,7 @@
     <tr>
       <td><%= recipe.name %></td>
       <td><%= recipe.author %></td>
-      <td><%= recipe.default_image %></td>
+      <td><%= recipe.category.name %></td>
 
       <td class="text-right">
         <span><%= link "Show", to: recipe_path(@conn, :show, recipe), class: "btn btn-default btn-xs" %></span>
