fix the ingredient ordering
There was a bug with ingredient ordering where sometimes ingredients
would be displayed out of order on recipes after they had been entered.
This is because we weren't sending in the ingredient order previously.

This change will now save an order attribute for every ingredient on a
recipe.

--- a/lib/ressipy_web/templates/recipe/form.html.eex
+++ b/lib/ressipy_web/templates/recipe/form.html.eex
@@ -38,6 +38,7 @@
           <%= text_input j, :amount, class: "form-control" %>
           <%= error_tag j, :amount %>
         </div>
+        <%= hidden_input j, :order, value: j.index + 1 %>
         <%= inputs_for j, :ingredient, fn g -> %>
         <div class="form-group col-xs-9">
           <%= hidden_input g, :id %>
