use slugs to load pages
Rather than using numeric IDs that can be used to iterate over all the
records in the database, this now uses the slugs for categories and
recipes. This also makes for better URLs for SEO purposes.

--- a/lib/ressipy_web/templates/category/index.html.eex
+++ b/lib/ressipy_web/templates/category/index.html.eex
@@ -1,7 +1,7 @@
 <ul class="categories">
 <%= for category <- @categories do %>
   <li>
-    <%= link category.name, to: Routes.category_path(@conn, :show, category) %>
+    <%= link category.name, to: Routes.category_path(@conn, :show, category.slug) %>
   </li>
 <% end %>
 </ul>
