--- a/lib/ressipy_web/templates/recipe/edit.html.eex
+++ b/lib/ressipy_web/templates/recipe/edit.html.eex
@@ -4,4 +4,4 @@
                         categories: @categories,
                         action: Routes.recipe_path(@conn, :update, @recipe) %>
 
-<span><%= link "Back", to: Routes.recipe_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.recipe_path(@conn, :show, @recipe.slug) %></span>
