--- a/lib/ressipy_web/templates/category/show.html.eex
+++ b/lib/ressipy_web/templates/category/show.html.eex
@@ -3,13 +3,13 @@
 <ul class="recipes">
 <%= for recipe <- @category.recipes do %>
   <li>
-    <%= link recipe.name, to: Routes.recipe_path(@conn, :show, recipe) %>
+    <%= link recipe.name, to: Routes.recipe_path(@conn, :show, recipe.slug) %>
     <div class="recipe-actions">
-      <span><%= link "Edit", to: Routes.recipe_path(@conn, :edit, recipe), class: "btn btn-default btn-xs" %></span>
-      <span><%= link "Delete", to: Routes.recipe_path(@conn, :delete, recipe), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
+      <span><%= link "Edit", to: Routes.recipe_path(@conn, :edit, recipe.slug), class: "btn btn-default btn-xs" %></span>
+      <span><%= link "Delete", to: Routes.recipe_path(@conn, :delete, recipe.slug), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
     </div>
   </li>
 <% end %>
 </ul>
 
-<%= link "New Recipe", to: Routes.recipe_path(@conn, :new, category: @category), class: "btn btn-default btn-new" %>
+<%= link "New Recipe", to: Routes.recipe_path(@conn, :new, category: @category.slug), class: "btn btn-default btn-new" %>
