--- a/lib/ressipy_web/templates/recipe/new.html.eex
+++ b/lib/ressipy_web/templates/recipe/new.html.eex
@@ -5,5 +5,5 @@
                         action: Routes.recipe_path(@conn, :create) %>
 
 <%= if !is_nil(@changeset.data.category_id) do %>
-  <span><%= link "Back", to: Routes.category_path(@conn, :show, @changeset.data.category_id) %></span>
+  <span><%= link "Back", to: Routes.category_path(@conn, :show, @selected_category.slug) %></span>
 <% end %>
