--- a/lib/ressipy_web/templates/category/edit.html.eex
+++ b/lib/ressipy_web/templates/category/edit.html.eex
@@ -1,6 +1,6 @@
 <h2>Edit Category</h2>
 
 <%= render "form.html", changeset: @changeset,
-                        action: Routes.category_path(@conn, :update, @category) %>
+                        action: Routes.category_path(@conn, :update, @category.slug) %>
 
 <span><%= link "Back", to: Routes.category_path(@conn, :index) %></span>
