--- a/lib/ressipy_web/templates/recipe/edit.html.eex
+++ b/lib/ressipy_web/templates/recipe/edit.html.eex
@@ -2,6 +2,6 @@
 
 <%= render "form.html", changeset: @changeset,
                         categories: @categories,
-                        action: Routes.recipe_path(@conn, :update, @recipe) %>
+                        action: Routes.recipe_path(@conn, :update, @recipe.slug) %>
 
 <span><%= link "Back", to: Routes.recipe_path(@conn, :show, @recipe.slug) %></span>
