--- a/lib/ressipy_web/templates/layout/app.html.eex
+++ b/lib/ressipy_web/templates/layout/app.html.eex
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>Ressipy</title>
-    <meta property="og:title" content="Ressipy">
+    <title><%= title(assigns) %></title>
+    <meta property="og:title" content="<%= title(assigns) %>">
     <meta property="og:site_name" content="Ressipy">
     <meta property="og:description" content="Find and share family recipes you love.">
-    <link id="canonicalUrl" rel="canonical" href="https://ressipy.com">
-    <meta property="og:url" content="https://ressipy.com/">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
